<resources>
    <string name="app_name">MobileProject</string>
    <string name="introduceApp">당신을 위한 퀠린둬</string>
    <string name="monthly">월간 캘린더</string>
    <string name="checking">중복확인</string>
    <string name="applyCal">일정 등록</string>
    <string name="end">종료</string>
    <string name="start">시작</string>
    <string name="weekly">주간 캘린더</string>
    <string name="applyDate">2020.11.20</string>
    <string name="applytime">18:00</string>
    <string name="searchActivity">모임 찾기</string>
    <string name="applyTitle">신청하기</string>
    <string name="applyActivityTitle">활동 등록</string>
    <string name="anotherinfo">추가 정보</string>
    <string name="addFile">-hwp, PDF, docx</string>
    <string name="price">무료</string>
    <string name="addr">주소</string>
    <string name="star">*</string>
    <string name="hashtag1">기획/아이디어</string>
    <string name="hashtag2">광고/마케팅</string>
    <string name="hashtag3">논문/리포트</string>
    <string name="hashtag4">영상/UCC/사진</string>
    <string name="hashtag5">디자인/캐릭터/웹툰</string>
    <string name="hashtag6">웹/모바일/플래시</string>
    <string name="hashtag7">게임/소프트웨</string>
    <string name="applyinfo">사용자 정보 입력</string>
    <string name="maxPeople">신청 가능 인원</string>
    <string name="input">모임 검색</string>
    <string name="user_recommnad">사용자 맞춤 모임 추천</string>
    <string name="titleMoim">공모전 이름</string>
    <string name="top_recommand">인기 많은 모임</string>
    <string name="detail">상세 정보</string>
    <string name="apply">등록</string>
    <string name="detailGroup">모임 상세 내용</string>
    <string name="inputTitle">일정 제목을 입력해 주세요</string>
    <string name="email">이메일</string>
    <string name="phoneNum">전화번호</string>
    <string name="sosok">소속</string>
    <string name="nameMoim">모임 이름</string>
    <string name="nametag">관련 태그</string>
    <string name="applyOut">신청하기(외부접수)</string>
    <string name="applyIn">신청하기</string>
    <string name="emailReal">sonho@hissf.or.kr</string>
    <string name="phoneReal">-</string>
    <string name="companyReal">NHN컨소시엄</string>
    <string name="time">2020년 12월 17일</string>
    <string name="infoMoim">모임 정보</string>
    <string name="infoPeople">개설자 정보</string>
    <string name="askInputHint">비방, 홍보 등의 글은 이용약관 및 관련 법에 의해 제재될 수 있습니다. </string>
    <string name="ask">문의/기대평</string>
    <string name="detailMoim">모임 설명</string>
    <string name="outMoim1">본 공모전은 외부접수 공모전입니다.</string>
    <string name="explainMoim">서울장학재단 미션과 핵심가치를 잘 표현한 문구, 친근하고 누구나 쉽게 이해할 수 있는 문</string>
    <string name="outMoim2">외부접수 페이지에서 공모전 담당자가 기재한 방법 또는 설정한 링크를 통해 참여 신청이 가능합니다.</string>
    <string name="inMoim">본 공모전은 내부접수 공모전입니다.</string>
    <string name="intMoim2">제한 없음</string>
    <string name="nice">선택 완료</string>
    <string name="title_activity_bottom_navi">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="steamedTitle">찜 내역</string>
    <string name="meet">모임</string>
    <string name="founder">개설자</string>
    <string name="steameContent1">총 0개의 모임</string>
    <string name="steameContent2">찜 내역이 없습니다.</string>

    <string name="searchTitle">일정 검색</string>
    <string name="search">검색</string>

    <string name="applicationDetailsTitle">신청 내역</string>
    <string name="title">공모전 주제</string>
    <string name="date">날짜</string>
    <string name="position">위치</string>
    <string name="applicationContent1">총 2개의 모임</string>
    <string name="applicationContent2">자유과제 마감(6명)</string>
    <string name="applicationContent3">미결제/대기자</string>
    <string name="applicationContent4">본 모임은 종료 되었습니다.</string>
    <string name="applicationContent5">본 모임은 진행 중입니다.</string>
    <string name="applicationContent6">개인 예비접수(1명)</string>

    <string name="interested">관심 정보 설정</string>
    <string name="item1">기획/아이디어</string>
    <string name="item2">광고/마케팅</string>
    <string name="item3">논문/리포트</string>
    <string name="item4">기획/아이디어</string>
    <string name="item5">영상/UCC/사진</string>
    <string name="item6">디자인/캐릭터/웹툰</string>
    <string name="item7">웹/모바일/플래시</string>
    <string name="item8">게임/소프트웨어</string>
    <string name="btn_clear">초기화</string>
    <string name="btn_save">저장</string>

    <string name="changeinfo">내 정보 수정</string>
    <string name="notice">공지사항</string>
    <string name="recentlist">최근 본 모임</string>
    <string name="registertitle">활동 등록</string>

</resources>