<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/infoPeople"
            android:textColor="@color/black"
            android:textSize="14dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:text="fil8466@naver.com"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/phoneNum"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/phoneReal"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/medium"
                android:text="@string/sosok"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/medium"
                android:text="부엉이 엔터테인먼트"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>