<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/position"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="370dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints">
                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/applicationContent2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:fontFamily="@font/medium"
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/applicationContent3"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="370dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />
            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:fontFamily="@font/medium"
                android:text="@string/applicationContent4"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>