<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/ll1"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/tutu"
                    android:src="@drawable/ic_baseline_close_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/medium"
                    android:text="@string/interested"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/ll1"
                android:background="@color/gray" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                >

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item1"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn2"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/btn1"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item2"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn3"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/btn2"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item3"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn4"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item4"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn5"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/btn2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/btn4"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item5"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn6"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn3"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/btn2"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item6"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn7"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item7"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn8"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn4"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/btn1"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item8"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn9"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn6"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/btn8"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item9"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn10"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn7"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item10"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn11"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn8"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/btn10"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item11"
                    android:textColor="@color/black" />

                <Button
                    android:layout_marginBottom="7dp"
                    android:id="@+id/btn12"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btn9"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@+id/btn11"
                    android:backgroundTint="@color/tutu"
                    android:fontFamily="@font/medium"
                    android:text="@string/item12"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/themeColor"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/medium"
                    android:text="@string/btn_clear"
                    android:textColor="@color/white" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="@color/themeColor"
                    android:fontFamily="@font/medium"
                    android:text="@string/btn_save"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>